--- a/unleashed/CSS/1head.css
+++ b/unleashed/CSS/1head.css
@@ -76,6 +76,7 @@
     .container {
         flex-direction: column;
         align-items: flex-start;
+        width: 100%;
     }
     
     .LogoH {
