--- a/unleashed/CSS/allproducts.css
+++ b/unleashed/CSS/allproducts.css
@@ -1,3 +1,10 @@
+html {
+    width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: rgb(255, 255, 255);
     margin: 0px;
@@ -55,6 +62,13 @@ h1{
 
 /* VIEWPORT FOR 320px ( MOBILE ) */
 @media (max-width: 420px) {
+    html {
+        width: 100%;
+        overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+    }
+
     h1 {
         margin-top: 50px;
     }
