--- a/unleashed/CSS/1head.css
+++ b/unleashed/CSS/1head.css
@@ -75,14 +75,14 @@
 @media (max-width: 420px) {
     .container {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         width: 100%;
+        box-sizing: border-box;
     }
     
     .LogoH {
-        place-self: center;
-        justify-self: center;
-        transform: scale(1.1);
+        margin-left: 0;
+        margin-top: 10px;
     }
 
     /* SHOW MENU LIST */
