--- a/unleashed/CSS/1head.css
+++ b/unleashed/CSS/1head.css
@@ -106,8 +106,6 @@
         background-color: #f0f0f0;
         padding: 10px;
         box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        justify-content: center;
-        align-items: center;
     }
     
     /* SHOW/HIDE MENU*/
@@ -116,6 +114,9 @@
     }
     
     .navlinksH {
+        margin: 0;
+        width: 100%;
+        text-align: center;
         padding: 10px 0; 
         border-bottom: 1px solid #ccc;
     }
